preparing the model deploy

--- a/src/CNN_brain_tumor_detection.ipynb
+++ b/src/CNN_brain_tumor_detection.ipynb
@@ -1014,6 +1014,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "With the deploy in mind, I will already do the dump of the model using the pickle library."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open(\"cnn_brain_tumor_identifier.pkl\", \"wb\") as f:\n",
+    "    pickle.dump(model, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Follow me and stay tuned for updates!"
    ]
   },
